--- a/releases/prod/hello-arc.yaml
+++ b/releases/prod/hello-arc.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   releaseName: hello-arc-prod
   chart:
-    git: https://github.com/likamrat/hello_arc.git
+    #git: https://github.com/likamrat/hello_arc.git
+    git: https://github.com/rramankutty0/hello_arc.git
     path: charts/hello-arc
     ref: master
   values:
